Fix spacing issue at bottom of table

--- a/src/app/pages/services/services.component.css
+++ b/src/app/pages/services/services.component.css
@@ -7,18 +7,17 @@ mat-card.card-filter.mat-card {
   padding: 0;
 }
 
-mat-card.card-filter.mat-card .mat-card-content {
+/* mat-card.card-filter.mat-card .mat-card-content {
   padding: 8px 0;
 }
 
 mat-card.card-filter.mat-card .mat-card-header>div {
-  /*display:inline-block;*/
-}
+  display:inline-block;
+} */
 
 
 mat-card.card-filter .filter-field {
-  width: 70%;
-  margin-right: 5%;
+  width: 350px;
   margin-top: 12px;
 }
 
@@ -198,8 +197,4 @@ mat-chip.service-state-on,
   position: relative;
   top: 25px;
   left: 47%;
-}
-
-#filter-input{
-  width: 300px;
 }
